Bug 957117 - DevTools Themes: Use light theme for top tabbar and toolbars OVERRIDE HOOK;r=vporof
UltraBlame original commit: ae4b3d2319b2abbc23c7476281a9f5899c1cfa31

--- a/browser/themes/shared/devtools/light-theme.css
+++ b/browser/themes/shared/devtools/light-theme.css
@@ -5,11 +5,29 @@ body
 {
 background
 :
-white
+#
+fcfcfc
 ;
 color
 :
-black
+#
+18191a
+;
+}
+.
+theme
+-
+sidebar
+{
+background
+:
+#
+f7f7f7
+;
+color
+:
+#
+18191a
 ;
 }
 :
@@ -834,31 +852,33 @@ toolbar
 devtools
 -
 toolbar
+.
+devtools
+-
+sidebar
+-
+tabs
+>
+tabs
 {
 color
 :
-hsl
-(
-210
-30
-%
-85
-%
-)
+#
+585959
 ;
 background
 -
 color
 :
 #
-343c45
+f0f1f2
 ;
 border
 -
 color
 :
 #
-060a0d
+aaa
 ;
 }
 .
@@ -911,18 +931,13 @@ title
 {
 background
 :
-hsl
-(
-208
-56
-%
-40
-%
-)
+#
+4c9ed9
 ;
 color
 :
-white
+#
+f5f7fa
 ;
 }
 .
