--- a/browser/themes/shared/devtools/netmonitor.inc.css
+++ b/browser/themes/shared/devtools/netmonitor.inc.css
@@ -1,23 +1,4 @@
 #
-body
-{
-background
-:
-url
-(
-background
--
-noise
--
-toolbar
-.
-png
-)
-#
-343c45
-;
-}
-#
 requests
 -
 menu
@@ -26,20 +7,9 @@ empty
 -
 notice
 {
-background
+margin
 :
-url
-(
-background
--
-noise
--
-toolbar
-.
-png
-)
-#
-343c45
+0
 ;
 padding
 :
@@ -52,10 +22,43 @@ size
 110
 %
 ;
+}
+.
+theme
+-
+dark
+#
+requests
+-
+menu
+-
+empty
+-
+notice
+{
 color
 :
 #
 f5f7fa
+;
+}
+.
+theme
+-
+light
+#
+requests
+-
+menu
+-
+empty
+-
+notice
+{
+color
+:
+#
+585959
 ;
 }
 %
@@ -63,7 +66,7 @@ filter
 substitution
 %
 define
-tableBorderLight
+table_itemDarkStartBorder
 rgba
 (
 0
@@ -75,7 +78,7 @@ rgba
 )
 %
 define
-tableBorderDark
+table_itemDarkEndBorder
 rgba
 (
 128
@@ -85,6 +88,22 @@ rgba
 .
 15
 )
+%
+define
+table_itemLightStartBorder
+rgba
+(
+128
+128
+128
+0
+.
+25
+)
+%
+define
+table_itemLightEndBorder
+transparent
 #
 requests
 -
@@ -141,6 +160,10 @@ padding
 ;
 }
 .
+theme
+-
+dark
+.
 requests
 -
 menu
@@ -154,16 +177,10 @@ last
 -
 child
 )
-:
+.
+theme
 -
-moz
--
-locale
--
-dir
-(
-ltr
-)
+dark
 .
 requests
 -
@@ -178,16 +195,6 @@ last
 -
 child
 )
-:
--
-moz
--
-locale
--
-dir
-(
-ltr
-)
 {
 -
 moz
@@ -198,7 +205,7 @@ end
 :
 1px
 solid
-tableBorderLight
+table_itemDarkStartBorder
 ;
 box
 -
@@ -207,10 +214,14 @@ shadow
 1px
 0
 0
-tableBorderDark
+table_itemDarkEndBorder
 ;
 }
 .
+theme
+-
+dark
+.
 requests
 -
 menu
@@ -234,6 +245,10 @@ dir
 (
 rtl
 )
+.
+theme
+-
+dark
 .
 requests
 -
@@ -259,6 +274,54 @@ dir
 rtl
 )
 {
+box
+-
+shadow
+:
+-
+1px
+0
+0
+table_itemDarkEndBorder
+;
+}
+.
+theme
+-
+light
+.
+requests
+-
+menu
+-
+header
+:
+not
+(
+:
+last
+-
+child
+)
+.
+theme
+-
+light
+.
+requests
+-
+menu
+-
+subitem
+:
+not
+(
+:
+last
+-
+child
+)
+{
 -
 moz
 -
@@ -268,8 +331,75 @@ end
 :
 1px
 solid
-tableBorderLight
+table_itemLightStartBorder
 ;
+box
+-
+shadow
+:
+1px
+0
+0
+table_itemLightEndBorder
+;
+}
+.
+theme
+-
+light
+.
+requests
+-
+menu
+-
+header
+:
+not
+(
+:
+last
+-
+child
+)
+:
+-
+moz
+-
+locale
+-
+dir
+(
+rtl
+)
+.
+theme
+-
+light
+.
+requests
+-
+menu
+-
+subitem
+:
+not
+(
+:
+last
+-
+child
+)
+:
+-
+moz
+-
+locale
+-
+dir
+(
+rtl
+)
+{
 box
 -
 shadow
@@ -278,7 +408,7 @@ shadow
 1px
 0
 0
-tableBorderDark
+table_itemLightEndBorder
 ;
 }
 .
@@ -767,6 +897,10 @@ in
 out
 ;
 }
+.
+theme
+-
+dark
 box
 .
 requests
@@ -830,6 +964,64 @@ rgba
 )
 ;
 }
+.
+theme
+-
+light
+box
+.
+requests
+-
+menu
+-
+status
+:
+not
+(
+[
+code
+]
+)
+{
+box
+-
+shadow
+:
+0
+0
+0
+1px
+rgba
+(
+255
+255
+255
+0
+.
+4
+)
+inset
+0
+-
+6px
+4px
+0
+rgba
+(
+32
+32
+32
+0
+.
+5
+)
+inset
+;
+}
+.
+theme
+-
+dark
 box
 .
 requests
@@ -894,6 +1086,63 @@ rgba
 )
 ;
 }
+.
+theme
+-
+light
+box
+.
+requests
+-
+menu
+-
+status
+[
+code
+^
+=
+"
+1
+"
+]
+{
+box
+-
+shadow
+:
+0
+0
+2px
+1px
+rgba
+(
+255
+255
+255
+0
+.
+8
+)
+inset
+0
+-
+6px
+4px
+0
+rgba
+(
+0
+0
+128
+1
+)
+inset
+;
+}
+.
+theme
+-
+dark
 box
 .
 requests
@@ -958,6 +1207,63 @@ rgba
 )
 ;
 }
+.
+theme
+-
+light
+box
+.
+requests
+-
+menu
+-
+status
+[
+code
+^
+=
+"
+2
+"
+]
+{
+box
+-
+shadow
+:
+0
+0
+2px
+1px
+rgba
+(
+255
+255
+255
+0
+.
+8
+)
+inset
+0
+-
+6px
+4px
+0
+rgba
+(
+0
+128
+0
+1
+)
+inset
+;
+}
+.
+theme
+-
+dark
 box
 .
 requests
@@ -1022,6 +1328,63 @@ rgba
 )
 ;
 }
+.
+theme
+-
+light
+box
+.
+requests
+-
+menu
+-
+status
+[
+code
+^
+=
+"
+3
+"
+]
+{
+box
+-
+shadow
+:
+0
+0
+2px
+1px
+rgba
+(
+255
+255
+255
+0
+.
+8
+)
+inset
+0
+-
+6px
+4px
+0
+rgba
+(
+128
+64
+0
+1
+)
+inset
+;
+}
+.
+theme
+-
+dark
 box
 .
 requests
@@ -1086,6 +1449,63 @@ rgba
 )
 ;
 }
+.
+theme
+-
+light
+box
+.
+requests
+-
+menu
+-
+status
+[
+code
+^
+=
+"
+4
+"
+]
+{
+box
+-
+shadow
+:
+0
+0
+2px
+1px
+rgba
+(
+255
+255
+255
+0
+.
+8
+)
+inset
+0
+-
+6px
+4px
+0
+rgba
+(
+128
+0
+0
+1
+)
+inset
+;
+}
+.
+theme
+-
+dark
 box
 .
 requests
@@ -1150,6 +1570,61 @@ rgba
 )
 ;
 }
+.
+theme
+-
+light
+box
+.
+requests
+-
+menu
+-
+status
+[
+code
+^
+=
+"
+5
+"
+]
+{
+box
+-
+shadow
+:
+0
+0
+2px
+1px
+rgba
+(
+255
+255
+255
+0
+.
+8
+)
+inset
+0
+-
+6px
+4px
+0
+rgba
+(
+128
+0
+128
+1
+.
+0
+)
+inset
+;
+}
 #
 requests
 -
@@ -1206,18 +1681,6 @@ start
 :
 4px
 ;
--
-moz
--
-border
--
-start
-:
-1px
-dotted
-#
-999
-;
 font
 -
 size
@@ -1249,6 +1712,16 @@ first
 child
 )
 {
+-
+moz
+-
+border
+-
+start
+:
+1px
+dotted
+;
 -
 moz
 -
@@ -1317,6 +1790,10 @@ center
 ;
 }
 .
+theme
+-
+dark
+.
 requests
 -
 menu
@@ -1347,6 +1824,45 @@ f5f7fa
 important
 ;
 }
+.
+theme
+-
+light
+.
+requests
+-
+menu
+-
+timings
+-
+division
+[
+division
+-
+scale
+=
+millisecond
+]
+{
+-
+moz
+-
+border
+-
+start
+-
+color
+:
+#
+585959
+!
+important
+;
+}
+.
+theme
+-
+dark
 .
 requests
 -
@@ -1385,6 +1901,51 @@ weight
 ;
 }
 .
+theme
+-
+light
+.
+requests
+-
+menu
+-
+timings
+-
+division
+[
+division
+-
+scale
+=
+second
+]
+{
+-
+moz
+-
+border
+-
+start
+-
+color
+:
+#
+d97e00
+!
+important
+;
+font
+-
+weight
+:
+600
+;
+}
+.
+theme
+-
+dark
+.
 requests
 -
 menu
@@ -1411,6 +1972,47 @@ color
 :
 #
 eb5368
+!
+important
+;
+font
+-
+weight
+:
+600
+;
+}
+.
+theme
+-
+light
+.
+requests
+-
+menu
+-
+timings
+-
+division
+[
+division
+-
+scale
+=
+minute
+]
+{
+-
+moz
+-
+border
+-
+start
+-
+color
+:
+#
+ed2655
 !
 important
 ;
@@ -1459,6 +2061,14 @@ repeat
 repeat
 -
 y
+;
+background
+-
+position
+:
+-
+1px
+center
 ;
 margin
 -
@@ -1657,14 +2267,57 @@ width
 ;
 height
 :
-9px
+8px
 ;
+box
+-
+shadow
+:
+none
+!
+important
+;
+}
+.
+theme
+-
+dark
+.
+requests
+-
+menu
+-
+timings
+-
+cap
+{
 border
 :
 1px
 solid
 #
-fff
+b8c8d9
+;
+}
+.
+theme
+-
+light
+.
+requests
+-
+menu
+-
+timings
+-
+cap
+{
+border
+:
+1px
+solid
+#
+292e33
 ;
 }
 .
@@ -1872,8 +2525,22 @@ box
 {
 height
 :
-9px
+8px
 ;
+}
+.
+theme
+-
+dark
+.
+requests
+-
+menu
+-
+timings
+-
+box
+{
 border
 -
 top
@@ -1881,7 +2548,7 @@ top
 1px
 solid
 #
-fff
+b8c8d9
 ;
 border
 -
@@ -1890,7 +2557,39 @@ bottom
 1px
 solid
 #
-fff
+b8c8d9
+;
+}
+.
+theme
+-
+light
+.
+requests
+-
+menu
+-
+timings
+-
+box
+{
+border
+-
+top
+:
+1px
+solid
+#
+292e33
+;
+border
+-
+bottom
+:
+1px
+solid
+#
+292e33
 ;
 }
 .
@@ -1934,7 +2633,7 @@ shadow
 :
 0
 0
-8px
+2px
 0
 rgba
 (
@@ -1947,7 +2646,7 @@ rgba
 )
 0
 0
-4px
+1px
 0
 rgba
 (
@@ -2002,7 +2701,7 @@ shadow
 :
 0
 0
-8px
+2px
 0
 rgba
 (
@@ -2015,7 +2714,7 @@ rgba
 )
 0
 0
-4px
+1px
 0
 rgba
 (
@@ -2070,7 +2769,7 @@ shadow
 :
 0
 0
-8px
+2px
 0
 rgba
 (
@@ -2083,7 +2782,7 @@ rgba
 )
 0
 0
-4px
+1px
 0
 rgba
 (
@@ -2098,6 +2797,10 @@ inset
 ;
 }
 .
+theme
+-
+dark
+.
 requests
 -
 menu
@@ -2107,6 +2810,10 @@ timings
 box
 .
 send
+.
+theme
+-
+dark
 .
 requests
 -
@@ -2138,7 +2845,7 @@ shadow
 :
 0
 0
-8px
+2px
 0
 rgba
 (
@@ -2151,7 +2858,7 @@ rgba
 )
 0
 0
-4px
+1px
 0
 rgba
 (
@@ -2165,6 +2872,86 @@ rgba
 inset
 ;
 }
+.
+theme
+-
+light
+.
+requests
+-
+menu
+-
+timings
+-
+box
+.
+send
+.
+theme
+-
+light
+.
+requests
+-
+menu
+-
+timings
+-
+cap
+.
+send
+{
+background
+-
+color
+:
+rgba
+(
+255
+255
+128
+0
+.
+4
+)
+;
+box
+-
+shadow
+:
+0
+0
+2px
+0
+rgba
+(
+128
+255
+128
+0
+.
+8
+)
+0
+0
+1px
+0
+rgba
+(
+255
+255
+255
+1
+.
+0
+)
+inset
+;
+}
+.
+theme
+-
+dark
 .
 requests
 -
@@ -2175,6 +2962,10 @@ timings
 box
 .
 wait
+.
+theme
+-
+dark
 .
 requests
 -
@@ -2206,7 +2997,7 @@ shadow
 :
 0
 0
-8px
+2px
 0
 rgba
 (
@@ -2219,7 +3010,7 @@ rgba
 )
 0
 0
-4px
+1px
 0
 rgba
 (
@@ -2234,6 +3025,86 @@ inset
 ;
 }
 .
+theme
+-
+light
+.
+requests
+-
+menu
+-
+timings
+-
+box
+.
+wait
+.
+theme
+-
+light
+.
+requests
+-
+menu
+-
+timings
+-
+cap
+.
+wait
+{
+background
+-
+color
+:
+rgba
+(
+200
+200
+200
+0
+.
+8
+)
+;
+box
+-
+shadow
+:
+0
+0
+2px
+0
+rgba
+(
+0
+0
+0
+0
+.
+4
+)
+0
+0
+1px
+0
+rgba
+(
+255
+255
+255
+1
+.
+0
+)
+inset
+;
+}
+.
+theme
+-
+dark
+.
 requests
 -
 menu
@@ -2243,6 +3114,10 @@ timings
 box
 .
 receive
+.
+theme
+-
+dark
 .
 requests
 -
@@ -2274,7 +3149,7 @@ shadow
 :
 0
 0
-8px
+2px
 0
 rgba
 (
@@ -2287,13 +3162,89 @@ rgba
 )
 0
 0
-4px
+1px
 0
 rgba
 (
 255
 255
 255
+1
+.
+0
+)
+inset
+;
+}
+.
+theme
+-
+light
+.
+requests
+-
+menu
+-
+timings
+-
+box
+.
+receive
+.
+theme
+-
+light
+.
+requests
+-
+menu
+-
+timings
+-
+cap
+.
+receive
+{
+background
+-
+color
+:
+rgba
+(
+0
+0
+0
+0
+.
+6
+)
+;
+box
+-
+shadow
+:
+0
+0
+2px
+0
+rgba
+(
+0
+0
+0
+0
+.
+8
+)
+0
+0
+1px
+0
+rgba
+(
+0
+0
+0
 1
 .
 0
@@ -2317,6 +3268,10 @@ padding
 0px
 ;
 }
+.
+theme
+-
+dark
 .
 side
 -
@@ -2359,88 +3314,28 @@ menu
 -
 widget
 -
-container
-{
-background
+item
 :
-url
+not
 (
-background
--
-noise
--
-toolbar
 .
-png
+selected
 )
-#
-343c45
-;
-}
-.
-theme
--
-light
-.
-side
--
-menu
--
-widget
--
-item
+[
+odd
+]
 {
-border
--
-top
+background
 :
-1px
-solid
-tableBorderLight
-;
-border
--
-bottom
-:
-1px
-solid
-tableBorderDark
-;
-color
-:
-#
-f5f7fa
-;
-}
-.
-theme
--
-light
-.
-side
--
-menu
--
-widget
--
-item
-:
-last
--
-of
--
-type
-{
-box
--
-shadow
-:
-inset
+rgba
+(
+128
+128
+128
 0
--
-1px
-0
-tableBorderLight
+.
+05
+)
 ;
 }
 #
@@ -2448,11 +3343,6 @@ details
 -
 pane
 {
-background
-:
-#
-343c45
-;
 max
 -
 width
@@ -2592,25 +3482,31 @@ rect
 ;
 }
 .
+theme
+-
+dark
+.
 tabpanel
 -
 content
 {
-background
+color
 :
-url
-(
-background
--
-noise
--
-toolbar
-.
-png
-)
 #
-343c45
+f5f7fa
 ;
+}
+.
+theme
+-
+dark
+.
+tabpanel
+-
+summary
+-
+label
+{
 color
 :
 #
@@ -2659,11 +3555,6 @@ font
 weight
 :
 600
-;
-color
-:
-#
-f5f7fa
 ;
 }
 .
@@ -2909,6 +3800,10 @@ ease
 -
 out
 ;
+border
+:
+none
+;
 min
 -
 width
@@ -3004,14 +3899,12 @@ menu
 -
 footer
 {
-box
+border
 -
-shadow
+top
 :
-inset
-0
+solid
 1px
-16px
 hsla
 (
 210
@@ -3062,10 +3955,67 @@ padding
 .
 5vw
 ;
+}
+.
+theme
+-
+dark
+.
+requests
+-
+menu
+-
+footer
+-
+button
+.
+theme
+-
+dark
+.
+requests
+-
+menu
+-
+footer
+-
+label
+{
 color
 :
 #
 f5f7fa
+;
+}
+.
+theme
+-
+light
+.
+requests
+-
+menu
+-
+footer
+-
+button
+.
+theme
+-
+light
+.
+requests
+-
+menu
+-
+footer
+-
+label
+{
+color
+:
+#
+18191a
 ;
 }
 .
@@ -3085,6 +4035,10 @@ width
 ;
 }
 .
+theme
+-
+dark
+.
 requests
 -
 menu
@@ -3102,6 +4056,10 @@ of
 -
 type
 )
+.
+theme
+-
+dark
 .
 requests
 -
@@ -3130,7 +4088,7 @@ start
 :
 1px
 solid
-tableBorderDark
+table_itemDarkStartBorder
 ;
 box
 -
@@ -3140,7 +4098,74 @@ shadow
 1px
 0
 0
-tableBorderLight
+table_itemDarkEndBorder
+;
+}
+.
+theme
+-
+light
+.
+requests
+-
+menu
+-
+footer
+-
+spacer
+:
+not
+(
+:
+first
+-
+of
+-
+type
+)
+.
+theme
+-
+light
+.
+requests
+-
+menu
+-
+footer
+-
+button
+:
+not
+(
+:
+first
+-
+of
+-
+type
+)
+{
+-
+moz
+-
+border
+-
+start
+:
+1px
+solid
+table_itemLightStartBorder
+;
+box
+-
+shadow
+:
+-
+1px
+0
+0
+table_itemLightEndBorder
 ;
 }
 .
