--- a/browser/themes/shared/devtools/profiler.inc.css
+++ b/browser/themes/shared/devtools/profiler.inc.css
@@ -79,6 +79,77 @@ transparent
 profiler
 -
 sidebar
+.
+devtools
+-
+toolbar
+{
+-
+moz
+-
+border
+-
+end
+:
+1px
+solid
+;
+}
+.
+theme
+-
+dark
+.
+profiler
+-
+sidebar
+.
+devtools
+-
+toolbar
+{
+-
+moz
+-
+border
+-
+end
+-
+color
+:
+black
+;
+}
+.
+theme
+-
+light
+.
+profiler
+-
+sidebar
+.
+devtools
+-
+toolbar
+{
+-
+moz
+-
+border
+-
+end
+-
+color
+:
+#
+aaa
+;
+}
+.
+profiler
+-
+sidebar
 -
 item
 {
@@ -149,15 +220,6 @@ top
 :
 2px
 ;
-color
-:
-rgb
-(
-140
-152
-165
-)
-;
 }
 .
 profiler
@@ -209,6 +271,10 @@ block
 ;
 }
 .
+theme
+-
+dark
+.
 selected
 .
 profiler
@@ -221,12 +287,29 @@ hbox
 {
 color
 :
-rgb
-(
-128
-195
-228
-)
+#
+b6babf
+;
+}
+.
+theme
+-
+light
+.
+selected
+.
+profiler
+-
+sidebar
+-
+item
+>
+hbox
+{
+color
+:
+#
+ebeced
 ;
 }
 #
