--- a/browser/themes/shared/devtools/splitview.css
+++ b/browser/themes/shared/devtools/splitview.css
@@ -1,29 +1,4 @@
 .
-splitview
--
-nav
--
-container
-{
-background
--
-color
-:
-hsl
-(
-211
-21
-%
-26
-%
-)
-;
-color
-:
-white
-;
-}
-.
 loading
 .
 splitview
@@ -70,6 +45,33 @@ center
 ;
 }
 .
+theme
+-
+dark
+.
+splitview
+-
+nav
+-
+container
+{
+background
+:
+url
+(
+background
+-
+noise
+-
+toolbar
+.
+png
+)
+#
+343c45
+;
+}
+.
 splitview
 -
 nav
@@ -85,6 +87,37 @@ margin
 :
 0
 ;
+}
+.
+theme
+-
+dark
+.
+splitview
+-
+nav
+{
+box
+-
+shadow
+:
+inset
+-
+1px
+0
+0
+black
+;
+}
+.
+theme
+-
+light
+.
+splitview
+-
+nav
+{
 box
 -
 shadow
@@ -95,7 +128,7 @@ inset
 0
 0
 #
-222426
+aaa
 ;
 }
 .
@@ -105,10 +138,6 @@ nav
 >
 li
 {
-color
-:
-white
-;
 background
 -
 clip
@@ -126,9 +155,9 @@ solid
 hsla
 (
 210
-40
+16
 %
-83
+76
 %
 .
 1
@@ -145,13 +174,13 @@ inset
 0
 hsla
 (
-211
-68
+210
+8
 %
-6
+5
 %
 .
-3
+25
 )
 ;
 -
@@ -257,6 +286,8 @@ url
 (
 itemArrow
 -
+dark
+-
 ltr
 .
 png
@@ -265,40 +296,16 @@ linear
 -
 gradient
 (
-to
-right
-black
-black
-)
-linear
--
-gradient
-(
-hsl
-(
-200
-100
-%
-33
-%
-)
-hsl
-(
-200
-100
-%
-25
-%
-)
+#
+1d4f73
+#
+1d4f73
 )
 ;
 background
 -
 repeat
 :
-no
--
-repeat
 no
 -
 repeat
@@ -313,8 +320,6 @@ position
 center
 right
 top
-right
-top
 left
 ;
 background
@@ -322,9 +327,6 @@ background
 size
 :
 auto
-1px
-100
-%
 auto
 ;
 border
@@ -408,6 +410,8 @@ url
 (
 itemArrow
 -
+dark
+-
 rtl
 .
 png
@@ -416,40 +420,16 @@ linear
 -
 gradient
 (
-to
-right
-black
-black
-)
-linear
--
-gradient
-(
-hsl
-(
-200
-100
-%
-33
-%
-)
-hsl
-(
-200
-100
-%
-25
-%
-)
+#
+1d4f73
+#
+1d4f73
 )
 ;
 background
 -
 repeat
 :
-no
--
-repeat
 no
 -
 repeat
@@ -464,9 +444,93 @@ position
 center
 left
 top
-left
-top
 right
+;
+}
+.
+theme
+-
+light
+.
+splitview
+-
+nav
+>
+li
+.
+splitview
+-
+active
+{
+background
+-
+image
+:
+url
+(
+itemArrow
+-
+ltr
+.
+svg
+)
+linear
+-
+gradient
+(
+#
+4c9ed9
+#
+4c9ed9
+)
+;
+}
+.
+theme
+-
+light
+.
+splitview
+-
+nav
+>
+li
+.
+splitview
+-
+active
+:
+-
+moz
+-
+locale
+-
+dir
+(
+rtl
+)
+{
+background
+-
+image
+:
+url
+(
+itemArrow
+-
+rtl
+.
+png
+)
+linear
+-
+gradient
+(
+#
+4c9ed9
+#
+4c9ed9
+)
 ;
 }
 .
@@ -495,92 +559,76 @@ border
 -
 box
 ;
-border
--
-bottom
-:
-1px
-solid
-hsla
-(
-210
-8
-%
-5
-%
-.
-65
-)
-;
 }
+.
+theme
+-
+dark
 .
 splitview
 -
 main
 >
 toolbar
-:
+.
+theme
+-
+dark
+.
+loading
+.
+splitview
+-
+nav
+-
+container
+{
 -
 moz
 -
-locale
--
-dir
-(
-ltr
-)
-{
 border
 -
-right
+end
 :
 1px
 solid
-hsla
-(
-210
-8
-%
-5
-%
-.
-5
-)
+black
 ;
 }
+.
+theme
+-
+light
 .
 splitview
 -
 main
 >
 toolbar
-:
+.
+theme
+-
+light
+.
+loading
+.
+splitview
+-
+nav
+-
+container
+{
 -
 moz
 -
-locale
--
-dir
-(
-rtl
-)
-{
 border
 -
-left
+end
 :
 1px
 solid
-hsla
-(
-210
-8
-%
-5
-%
-.
-5
-)
+#
+aaa
 ;
 }
 .
@@ -624,25 +672,6 @@ height
 .
 splitview
 -
-landscape
--
-splitter
-{
--
-moz
--
-border
--
-start
--
-color
-:
-transparent
-;
-}
-.
-splitview
--
 portrait
 -
 resizer
@@ -679,18 +708,18 @@ gradient
 (
 hsl
 (
-209
-18
+210
+11
 %
-34
+36
 %
 )
 hsl
 (
 210
-24
+11
 %
-16
+18
 %
 )
 )
