--- a/browser/themes/shared/devtools/styleeditor.css
+++ b/browser/themes/shared/devtools/styleeditor.css
@@ -1,24 +1,3 @@
-#
-style
--
-editor
--
-chrome
-{
-background
--
-color
-:
-hsl
-(
-211
-21
-%
-26
-%
-)
-;
-}
 .
 stylesheet
 -
@@ -34,17 +13,6 @@ decoration
 :
 none
 ;
-color
-:
-hsl
-(
-210
-30
-%
-85
-%
-)
-;
 }
 .
 stylesheet
@@ -59,11 +27,42 @@ size
 ;
 }
 .
+theme
+-
+dark
+.
+stylesheet
+-
+title
+.
+theme
+-
+dark
+.
+stylesheet
+-
+name
+{
+color
+:
+#
+f5f7fa
+;
+}
+.
+theme
+-
+dark
+.
 stylesheet
 -
 rule
 -
 count
+.
+theme
+-
+dark
 .
 stylesheet
 -
@@ -71,14 +70,56 @@ saveButton
 {
 color
 :
-hsl
-(
-210
-16
-%
-53
-%
-)
+#
+b6babf
+;
+}
+.
+theme
+-
+light
+.
+stylesheet
+-
+title
+.
+theme
+-
+light
+.
+stylesheet
+-
+name
+{
+color
+:
+#
+585959
+;
+}
+.
+theme
+-
+light
+.
+stylesheet
+-
+rule
+-
+count
+.
+theme
+-
+light
+.
+stylesheet
+-
+saveButton
+{
+color
+:
+#
+18191a
 ;
 }
 .
@@ -113,19 +154,10 @@ active
 stylesheet
 -
 name
-{
-color
-:
-hsl
-(
-0
-0
-%
-100
-%
-)
-;
-}
+.
+theme
+-
+light
 .
 splitview
 -
@@ -137,6 +169,10 @@ rule
 -
 count
 .
+theme
+-
+light
+.
 splitview
 -
 active
@@ -147,14 +183,8 @@ saveButton
 {
 color
 :
-hsl
-(
-205
-50
-%
-70
-%
-)
+#
+f5f7fa
 ;
 }
 .
@@ -325,6 +355,29 @@ height
 ;
 }
 .
+theme
+-
+light
+.
+stylesheet
+-
+enabled
+{
+background
+-
+image
+:
+url
+(
+itemToggle
+-
+light
+.
+png
+)
+;
+}
+.
 disabled
 >
 .
@@ -424,14 +477,6 @@ font
 size
 :
 11px
-;
-}
-.
-placeholder
-{
-color
-:
-white
 ;
 }
 .
