--- a/browser/themes/shared/devtools/toolbars.inc.css
+++ b/browser/themes/shared/devtools/toolbars.inc.css
@@ -115,20 +115,7 @@ text
 -
 shadow
 :
-0
--
-1px
-0
-hsla
-(
-210
-8
-%
-5
-%
-.
-45
-)
+none
 ;
 border
 :
@@ -151,6 +138,29 @@ radius
 :
 3px
 ;
+margin
+:
+0
+3px
+;
+}
+.
+theme
+-
+dark
+.
+devtools
+-
+menulist
+.
+theme
+-
+dark
+.
+devtools
+-
+toolbarbutton
+{
 background
 :
 linear
@@ -181,6 +191,10 @@ hsla
 padding
 -
 box
+;
+color
+:
+inherit
 ;
 box
 -
@@ -229,14 +243,230 @@ hsla
 15
 )
 ;
-margin
+}
+.
+theme
+-
+light
+.
+devtools
+-
+menulist
+.
+theme
+-
+light
+.
+devtools
+-
+toolbarbutton
+{
+background
 :
-0
-3px
+#
+f7f7f7
 ;
 color
 :
-inherit
+#
+18191a
+;
+border
+-
+color
+:
+#
+bbb
+;
+}
+.
+theme
+-
+light
+.
+devtools
+-
+menulist
+[
+open
+=
+true
+]
+.
+theme
+-
+light
+.
+devtools
+-
+toolbarbutton
+[
+open
+=
+true
+]
+.
+theme
+-
+light
+.
+devtools
+-
+toolbarbutton
+[
+open
+=
+true
+]
+:
+hover
+.
+theme
+-
+light
+.
+devtools
+-
+toolbarbutton
+[
+open
+=
+true
+]
+:
+hover
+:
+active
+.
+theme
+-
+light
+.
+devtools
+-
+toolbarbutton
+[
+checked
+=
+true
+]
+.
+theme
+-
+light
+.
+devtools
+-
+toolbarbutton
+[
+checked
+=
+true
+]
+:
+hover
+.
+theme
+-
+light
+.
+devtools
+-
+toolbarbutton
+[
+checked
+=
+true
+]
+:
+hover
+:
+active
+{
+background
+:
+#
+ddd
+;
+}
+.
+theme
+-
+light
+.
+devtools
+-
+toolbarbutton
+:
+hover
+{
+background
+:
+#
+eee
+;
+}
+.
+theme
+-
+light
+.
+devtools
+-
+toolbarbutton
+[
+type
+=
+menu
+-
+button
+]
+>
+.
+toolbarbutton
+-
+menubutton
+-
+button
+{
+color
+:
+#
+667380
+;
+}
+.
+theme
+-
+light
+.
+devtools
+-
+toolbarbutton
+[
+type
+=
+menu
+-
+button
+]
+[
+checked
+=
+true
+]
+>
+.
+toolbarbutton
+-
+menubutton
+-
+button
+{
+color
+:
+#
+18191a
 ;
 }
 .
@@ -361,6 +591,10 @@ none
 ;
 }
 .
+theme
+-
+dark
+.
 devtools
 -
 toolbarbutton
@@ -479,6 +713,10 @@ hsla
 ;
 }
 .
+theme
+-
+dark
+.
 devtools
 -
 menulist
@@ -488,6 +726,10 @@ open
 true
 ]
 .
+theme
+-
+dark
+.
 devtools
 -
 toolbarbutton
@@ -496,6 +738,10 @@ open
 =
 true
 ]
+.
+theme
+-
+dark
 .
 devtools
 -
@@ -898,6 +1144,30 @@ width
 :
 0
 ;
+}
+.
+theme
+-
+dark
+.
+devtools
+-
+toolbarbutton
+[
+type
+=
+menu
+-
+button
+]
+>
+.
+toolbarbutton
+-
+menubutton
+-
+button
+{
 -
 moz
 -
@@ -952,6 +1222,10 @@ hsla
 )
 ;
 }
+.
+theme
+-
+dark
 .
 devtools
 -
@@ -1013,6 +1287,42 @@ hsla
 .
 15
 )
+;
+}
+.
+theme
+-
+light
+.
+devtools
+-
+toolbarbutton
+[
+type
+=
+menu
+-
+button
+]
+>
+.
+toolbarbutton
+-
+menubutton
+-
+button
+{
+-
+moz
+-
+border
+-
+end
+:
+1px
+solid
+#
+bbb
 ;
 }
 .
@@ -1177,32 +1487,10 @@ radius
 ;
 %
 endif
-background
--
-color
-:
-rgba
-(
-24
-29
-32
-1
-)
-;
 padding
 :
 4px
 6px
-;
-color
-:
-rgba
-(
-184
-200
-217
-1
-)
 ;
 }
 .
@@ -1562,6 +1850,30 @@ border
 ;
 }
 .
+theme
+-
+light
+.
+devtools
+-
+sidebar
+-
+tabs
+>
+tabpanels
+{
+background
+:
+#
+f7f7f7
+;
+color
+:
+#
+18191a
+;
+}
+.
 devtools
 -
 sidebar
@@ -1585,11 +1897,6 @@ font
 :
 inherit
 ;
-color
-:
-#
-b6babf
-;
 margin
 -
 bottom
@@ -1600,13 +1907,6 @@ padding
 :
 0
 ;
-background
--
-color
-:
-#
-343c45
-;
 border
 -
 width
@@ -1615,21 +1915,6 @@ width
 0
 1px
 0
-;
-border
--
-color
-:
-hsla
-(
-210
-8
-%
-5
-%
-.
-6
-)
 ;
 border
 -
@@ -1721,25 +2006,6 @@ min
 height
 :
 32px
-;
-text
--
-shadow
-:
-0
--
-1px
-0
-hsla
-(
-210
-8
-%
-5
-%
-.
-45
-)
 ;
 text
 -
@@ -1960,6 +2226,10 @@ smallSeparator
 ;
 }
 .
+theme
+-
+dark
+.
 devtools
 -
 sidebar
@@ -2004,6 +2274,10 @@ hsla
 smallSeparator
 ;
 }
+.
+theme
+-
+dark
 .
 devtools
 -
@@ -2052,6 +2326,10 @@ smallSeparator
 ;
 }
 .
+theme
+-
+dark
+.
 devtools
 -
 sidebar
@@ -2081,6 +2359,10 @@ transparent
 solidSeparator
 ;
 }
+.
+theme
+-
+dark
 .
 devtools
 -
@@ -2131,6 +2413,10 @@ hsla
 solidSeparator
 ;
 }
+.
+theme
+-
+dark
 .
 devtools
 -
@@ -2183,6 +2469,10 @@ hsla
 solidSeparator
 ;
 }
+.
+theme
+-
+dark
 .
 devtools
 -
@@ -2219,6 +2509,10 @@ solidSeparator
 ;
 }
 .
+theme
+-
+dark
+.
 devtools
 -
 sidebar
@@ -2251,6 +2545,10 @@ solidSeparator
 ;
 }
 .
+theme
+-
+dark
+.
 devtools
 -
 sidebar
@@ -2280,6 +2578,206 @@ gradient
 1f3e4f
 #
 1f3e4f
+)
+solidSeparator
+;
+}
+.
+theme
+-
+light
+.
+devtools
+-
+sidebar
+-
+tabs
+>
+tabs
+>
+tab
+:
+hover
+{
+background
+-
+image
+:
+linear
+-
+gradient
+(
+#
+ddd
+#
+ddd
+)
+smallSeparator
+;
+}
+.
+theme
+-
+light
+.
+devtools
+-
+sidebar
+-
+tabs
+>
+tabs
+>
+tab
+:
+hover
+:
+active
+{
+background
+-
+image
+:
+linear
+-
+gradient
+(
+#
+ddd
+#
+ddd
+)
+smallSeparator
+;
+}
+.
+theme
+-
+light
+.
+devtools
+-
+sidebar
+-
+tabs
+>
+tabs
+>
+tab
+[
+selected
+]
++
+tab
+{
+background
+-
+image
+:
+linear
+-
+gradient
+(
+transparent
+transparent
+)
+solidSeparator
+;
+}
+.
+theme
+-
+light
+.
+devtools
+-
+sidebar
+-
+tabs
+>
+tabs
+>
+tab
+[
+selected
+]
++
+tab
+:
+hover
+{
+background
+-
+image
+:
+linear
+-
+gradient
+(
+#
+ddd
+#
+ddd
+)
+solidSeparator
+;
+}
+.
+theme
+-
+light
+.
+devtools
+-
+sidebar
+-
+tabs
+>
+tabs
+>
+tab
+[
+selected
+]
+.
+theme
+-
+light
+.
+devtools
+-
+sidebar
+-
+tabs
+>
+tabs
+>
+tab
+[
+selected
+]
+:
+hover
+:
+active
+{
+color
+:
+#
+f5f7fa
+;
+background
+-
+image
+:
+linear
+-
+gradient
+(
+#
+4c9ed9
+#
+4c9ed9
 )
 solidSeparator
 ;
@@ -3560,6 +4058,158 @@ center
 ;
 }
 .
+theme
+-
+light
+.
+devtools
+-
+tabbar
+{
+background
+:
+#
+ebeced
+;
+border
+-
+bottom
+-
+color
+:
+#
+aaa
+;
+}
+.
+theme
+-
+light
+.
+devtools
+-
+tab
+.
+theme
+-
+light
+.
+devtools
+-
+tab
+:
+hover
+{
+color
+:
+#
+18191a
+;
+border
+-
+color
+:
+#
+aaa
+;
+}
+.
+theme
+-
+light
+.
+devtools
+-
+tab
+:
+hover
+{
+background
+-
+color
+:
+#
+ddd
+;
+box
+-
+shadow
+:
+0
+-
+2px
+0
+rgba
+(
+0
+0
+0
+.
+1
+)
+inset
+;
+}
+.
+theme
+-
+light
+.
+devtools
+-
+tab
+:
+not
+(
+[
+selected
+]
+)
+[
+highlighted
+]
+{
+background
+-
+color
+:
+rgba
+(
+44
+187
+15
+.
+2
+)
+;
+}
+.
+theme
+-
+light
+.
+devtools
+-
+tab
+:
+last
+-
+child
+{
+-
+moz
+-
+border
+-
+end
+:
+1px
+solid
+#
+aaa
+;
+}
+.
 devtools
 -
 tab
@@ -3832,6 +4482,30 @@ inset
 ;
 }
 .
+theme
+-
+light
+#
+toolbox
+-
+tabs
+.
+devtools
+-
+tab
+[
+selected
+]
+{
+background
+-
+color
+:
+#
+4c9ed9
+;
+}
+.
 devtools
 -
 tab
@@ -3958,6 +4632,10 @@ start
 ;
 }
 .
+theme
+-
+dark
+.
 devtools
 -
 tab
@@ -3972,11 +4650,6 @@ selected
 highlighted
 ]
 {
-color
-:
-#
-f5f7fa
-;
 background
 -
 color
@@ -4002,6 +4675,28 @@ shadow
 #
 7bc107
 inset
+;
+}
+.
+theme
+-
+dark
+#
+toolbox
+-
+tabs
+.
+devtools
+-
+tab
+[
+selected
+]
+{
+color
+:
+#
+f5f7fa
 ;
 }
 .
@@ -4058,6 +4753,287 @@ collapse
 ;
 }
 .
+theme
+-
+light
+.
+devtools
+-
+tab
+>
+image
+.
+theme
+-
+light
+#
+toolbox
+-
+dock
+-
+buttons
+>
+toolbarbutton
+>
+image
+.
+theme
+-
+light
+.
+command
+-
+button
+>
+image
+.
+theme
+-
+light
+.
+command
+-
+button
+:
+active
+>
+image
+.
+theme
+-
+light
+.
+devtools
+-
+closebutton
+>
+image
+.
+theme
+-
+light
+.
+devtools
+-
+toolbarbutton
+>
+image
+.
+theme
+-
+light
+.
+devtools
+-
+option
+-
+toolbarbutton
+>
+image
+.
+theme
+-
+light
+#
+breadcrumb
+-
+separator
+-
+normal
+.
+theme
+-
+light
+.
+scrollbutton
+-
+up
+>
+.
+toolbarbutton
+-
+icon
+.
+theme
+-
+light
+.
+scrollbutton
+-
+down
+>
+.
+toolbarbutton
+-
+icon
+.
+theme
+-
+light
+#
+black
+-
+boxed
+-
+message
+-
+button
+.
+button
+-
+icon
+{
+filter
+:
+url
+(
+filters
+.
+svg
+#
+invert
+)
+;
+}
+.
+theme
+-
+light
+.
+command
+-
+button
+[
+checked
+=
+true
+]
+:
+not
+(
+:
+active
+)
+>
+image
+.
+theme
+-
+light
+.
+devtools
+-
+tab
+[
+selected
+]
+>
+image
+.
+theme
+-
+light
+.
+devtools
+-
+tab
+[
+highlighted
+]
+>
+image
+.
+theme
+-
+light
+.
+devtools
+-
+option
+-
+toolbarbutton
+[
+open
+]
+>
+image
+.
+theme
+-
+light
+#
+resume
+[
+checked
+]
+>
+image
+{
+filter
+:
+none
+!
+important
+;
+}
+.
+theme
+-
+light
+.
+command
+-
+button
+:
+hover
+{
+background
+-
+color
+:
+inherit
+;
+}
+.
+theme
+-
+light
+.
+command
+-
+button
+:
+hover
+:
+active
+.
+theme
+-
+light
+.
+command
+-
+button
+[
+checked
+=
+true
+]
+:
+not
+(
+:
+hover
+)
+{
+background
+-
+color
+:
+inherit
+;
+}
+.
 hidden
 -
 labels
@@ -4096,5 +5072,19 @@ child
 display
 :
 none
+;
+}
+.
+devtools
+-
+invisible
+-
+splitter
+{
+border
+-
+color
+:
+transparent
 ;
 }
