--- a/browser/themes/shared/devtools/webconsole.inc.css
+++ b/browser/themes/shared/devtools/webconsole.inc.css
@@ -1843,6 +1843,26 @@ none
 ;
 }
 .
+devtools
+-
+side
+-
+splitter
+~
+#
+webconsole
+-
+sidebar
+[
+hidden
+]
+{
+display
+:
+none
+;
+}
+.
 message
 [
 category
