--- a/browser/themes/shared/devtools/widgets.inc.css
+++ b/browser/themes/shared/devtools/widgets.inc.css
@@ -1186,6 +1186,23 @@ item
 pseudo
 -
 classes
+.
+breadcrumbs
+-
+widget
+-
+item
+[
+checked
+]
+.
+breadcrumbs
+-
+widget
+-
+item
+-
+classes
 {
 color
 :
@@ -1194,6 +1211,10 @@ f5f7fa
 ;
 }
 .
+theme
+-
+dark
+.
 breadcrumbs
 -
 widget
@@ -1201,6 +1222,31 @@ widget
 item
 -
 id
+.
+theme
+-
+dark
+.
+breadcrumbs
+-
+widget
+-
+item
+-
+classes
+.
+theme
+-
+dark
+.
+breadcrumbs
+-
+widget
+-
+item
+[
+checked
+]
 .
 breadcrumbs
 -
@@ -1217,6 +1263,10 @@ b6babf
 ;
 }
 .
+theme
+-
+dark
+.
 breadcrumbs
 -
 widget
@@ -1231,6 +1281,217 @@ color
 :
 #
 d99b28
+;
+}
+.
+theme
+-
+light
+.
+breadcrumbs
+-
+widget
+-
+item
+[
+checked
+]
+{
+background
+:
+-
+moz
+-
+element
+(
+#
+breadcrumb
+-
+separator
+-
+before
+)
+no
+-
+repeat
+0
+0
+;
+background
+-
+color
+:
+#
+4c9ed9
+;
+}
+.
+theme
+-
+light
+.
+breadcrumbs
+-
+widget
+-
+item
+:
+first
+-
+child
+{
+background
+-
+image
+:
+none
+;
+}
+.
+theme
+-
+light
+#
+breadcrumb
+-
+separator
+-
+before
+.
+theme
+-
+light
+#
+breadcrumb
+-
+separator
+-
+after
+:
+after
+{
+background
+:
+#
+4c9ed9
+;
+}
+.
+theme
+-
+light
+#
+breadcrumb
+-
+separator
+-
+after
+.
+theme
+-
+light
+#
+breadcrumb
+-
+separator
+-
+before
+:
+after
+{
+background
+:
+#
+f0f1f2
+;
+}
+.
+theme
+-
+light
+.
+breadcrumbs
+-
+widget
+-
+item
+.
+theme
+-
+light
+.
+breadcrumbs
+-
+widget
+-
+item
+-
+id
+.
+theme
+-
+light
+.
+breadcrumbs
+-
+widget
+-
+item
+-
+classes
+{
+color
+:
+#
+585959
+;
+}
+.
+theme
+-
+light
+.
+breadcrumbs
+-
+widget
+-
+item
+-
+pseudo
+-
+classes
+{
+color
+:
+#
+585959
+;
+}
+.
+theme
+-
+light
+.
+breadcrumbs
+-
+widget
+-
+item
+:
+not
+(
+[
+checked
+]
+)
+:
+hover
+label
+{
+color
+:
+#
+18191a
 ;
 }
 %
@@ -1538,38 +1799,19 @@ filter
 substitution
 %
 define
-smw_selectionGradient
-linear
--
-gradient
-(
-hsl
-(
-206
-59
-%
-39
-%
-)
-hsl
-(
-206
-59
-%
-29
-%
-)
-)
-%
-define
 smw_selectionTextColor
 #
-fff
+f5f7fa
 %
 define
-smw_margin
+smw_marginDark
 #
 222426
+%
+define
+smw_marginLight
+#
+aaa
 %
 define
 smw_itemDarkTopBorder
@@ -1671,6 +1913,123 @@ png
 ;
 }
 .
+theme
+-
+dark
+.
+side
+-
+menu
+-
+widget
+-
+container
+:
+-
+moz
+-
+locale
+-
+dir
+(
+ltr
+)
+.
+theme
+-
+dark
+.
+side
+-
+menu
+-
+widget
+-
+empty
+-
+text
+:
+-
+moz
+-
+locale
+-
+dir
+(
+ltr
+)
+{
+box
+-
+shadow
+:
+inset
+-
+1px
+0
+0
+smw_marginDark
+;
+}
+.
+theme
+-
+dark
+.
+side
+-
+menu
+-
+widget
+-
+container
+:
+-
+moz
+-
+locale
+-
+dir
+(
+rtl
+)
+.
+theme
+-
+dark
+.
+side
+-
+menu
+-
+widget
+-
+empty
+-
+text
+:
+-
+moz
+-
+locale
+-
+dir
+(
+rtl
+)
+{
+box
+-
+shadow
+:
+inset
+1px
+0
+0
+smw_marginDark
+;
+}
+.
 side
 -
 menu
@@ -1718,7 +2077,7 @@ inset
 1px
 0
 0
-smw_margin
+smw_marginLight
 ;
 }
 .
@@ -1768,7 +2127,7 @@ inset
 1px
 0
 0
-smw_margin
+smw_marginLight
 ;
 }
 .
@@ -1920,6 +2279,14 @@ bottom
 -
 1px
 ;
+background
+-
+clip
+:
+padding
+-
+box
+;
 }
 .
 theme
@@ -2054,6 +2421,10 @@ smw_itemLightTopBorder
 ;
 }
 .
+theme
+-
+dark
+.
 side
 -
 menu
@@ -2065,13 +2436,38 @@ item
 selected
 {
 background
-:
-smw_selectionGradient
-repeat
 -
-x
-top
-left
+color
+:
+#
+1d4f73
+;
+color
+:
+smw_selectionTextColor
+;
+}
+.
+theme
+-
+light
+.
+side
+-
+menu
+-
+widget
+-
+item
+.
+selected
+{
+background
+-
+color
+:
+#
+4c9ed9
 ;
 color
 :
@@ -2102,6 +2498,20 @@ start
 width
 :
 7px
+;
+margin
+-
+top
+:
+-
+1px
+;
+margin
+-
+bottom
+:
+-
+1px
 ;
 }
 .
@@ -2284,8 +2694,8 @@ gradient
 (
 to
 right
-smw_margin
-smw_margin
+smw_marginDark
+smw_marginDark
 )
 ;
 }
@@ -2345,8 +2755,8 @@ gradient
 (
 to
 right
-smw_margin
-smw_margin
+smw_marginDark
+smw_marginDark
 )
 ;
 }
@@ -2396,7 +2806,7 @@ itemArrow
 -
 ltr
 .
-png
+svg
 )
 linear
 -
@@ -2404,8 +2814,8 @@ gradient
 (
 to
 right
-smw_margin
-smw_margin
+smw_marginLight
+smw_marginLight
 )
 ;
 }
@@ -2455,7 +2865,7 @@ itemArrow
 -
 rtl
 .
-png
+svg
 )
 linear
 -
@@ -2463,8 +2873,8 @@ gradient
 (
 to
 right
-smw_margin
-smw_margin
+smw_marginLight
+smw_marginLight
 )
 ;
 }
@@ -3007,10 +3417,28 @@ scope
 .
 title
 {
-color
+border
+-
+top
+-
+width
 :
-#
-fff
+1px
+;
+border
+-
+top
+-
+style
+:
+solid
+;
+margin
+-
+top
+:
+-
+1px
 ;
 }
 .
