--- a/browser/themes/shared/devtools/dark-theme.css
+++ b/browser/themes/shared/devtools/dark-theme.css
@@ -14,6 +14,22 @@ color
 8fa1b2
 ;
 }
+.
+theme
+-
+sidebar
+{
+background
+:
+#
+131c26
+;
+color
+:
+#
+8fa1b2
+;
+}
 :
 :
 -
@@ -774,17 +790,19 @@ toolbar
 devtools
 -
 toolbar
+.
+devtools
+-
+sidebar
+-
+tabs
+>
+tabs
 {
 color
 :
-hsl
-(
-210
-30
-%
-85
-%
-)
+#
+b6babf
 ;
 background
 -
@@ -797,8 +815,16 @@ border
 -
 color
 :
-#
-060a0d
+hsla
+(
+210
+8
+%
+5
+%
+.
+6
+)
 ;
 }
 .
@@ -1773,6 +1799,73 @@ border
 bottom
 :
 0
+;
+}
+.
+devtools
+-
+horizontal
+-
+splitter
+{
+border
+-
+bottom
+:
+1px
+solid
+black
+;
+}
+.
+devtools
+-
+side
+-
+splitter
+{
+-
+moz
+-
+border
+-
+end
+:
+1px
+solid
+black
+;
+}
+.
+devtools
+-
+textinput
+.
+devtools
+-
+searchinput
+{
+background
+-
+color
+:
+rgba
+(
+24
+29
+32
+1
+)
+;
+color
+:
+rgba
+(
+184
+200
+217
+1
+)
 ;
 }
 %
