--- a/browser/themes/shared/devtools/debugger.inc.css
+++ b/browser/themes/shared/devtools/debugger.inc.css
@@ -2,26 +2,6 @@
 sources
 -
 pane
->
-tabs
-{
--
-moz
--
-border
--
-end
-:
-1px
-solid
-#
-222426
-;
-}
-#
-sources
--
-pane
 [
 selectedIndex
 =
@@ -50,6 +30,24 @@ transparent
 sources
 -
 pane
+>
+tabs
+{
+-
+moz
+-
+border
+-
+end
+:
+1px
+solid
+;
+}
+#
+sources
+-
+pane
 .
 devtools
 -
@@ -68,8 +66,77 @@ end
 :
 1px
 solid
+;
+}
+.
+theme
+-
+dark
 #
-222426
+sources
+-
+pane
+>
+tabs
+.
+theme
+-
+dark
+#
+sources
+-
+pane
+.
+devtools
+-
+toolbar
+{
+-
+moz
+-
+border
+-
+end
+-
+color
+:
+black
+;
+}
+.
+theme
+-
+light
+#
+sources
+-
+pane
+>
+tabs
+.
+theme
+-
+light
+#
+sources
+-
+pane
+.
+devtools
+-
+toolbar
+{
+-
+moz
+-
+border
+-
+end
+-
+color
+:
+#
+aaa
 ;
 }
 .
