Bug 965814 - Make the shader editor look good on the light theme. r=bgrins
UltraBlame original commit: 83c9104a63ba47fd907128210125ad65ad86f6f3

--- a/browser/themes/shared/devtools/shadereditor.inc.css
+++ b/browser/themes/shared/devtools/shadereditor.inc.css
@@ -1,5 +1,24 @@
-#
-body
+.
+notice
+-
+container
+{
+margin
+-
+top
+:
+-
+50vh
+;
+}
+.
+theme
+-
+dark
+.
+notice
+-
+container
 {
 background
 :
@@ -16,7 +35,16 @@ png
 #
 343c45
 ;
+color
+:
+#
+f5f7fa
+;
 }
+.
+theme
+-
+light
 .
 notice
 -
@@ -24,19 +52,23 @@ container
 {
 background
 :
-transparent
-;
-margin
+url
+(
+background
 -
-top
-:
+noise
 -
-50vh
+toolbar
+.
+png
+)
+#
+f0f1f2
 ;
 color
 :
 #
-fff
+585959
 ;
 }
 #
@@ -397,66 +429,14 @@ position
 ;
 }
 .
-side
--
-menu
--
-widget
--
-item
--
-checkbox
-:
-not
-(
-[
-checked
-]
-)
-~
-.
-side
--
-menu
--
-widget
--
-item
--
-contents
-{
-color
-:
-rgba
-(
-255
-255
-255
-0
-.
-4
-)
-;
-}
-.
 editor
 -
 label
 {
-background
+padding
 :
-url
-(
-background
--
-noise
--
-toolbar
-.
-png
-)
-#
-343c45
+1px
+12px
 ;
 border
 -
@@ -464,20 +444,66 @@ top
 :
 1px
 solid
+;
+}
+.
+theme
+-
+dark
+.
+editor
+-
+label
+{
+background
+:
+#
+343c45
+;
+border
+-
+color
+:
 #
 222426
-;
-padding
-:
-1px
-12px
 ;
 color
 :
 #
-fff
+f5f7fa
 ;
 }
+.
+theme
+-
+light
+.
+editor
+-
+label
+{
+background
+:
+#
+f0f1f2
+;
+border
+-
+color
+:
+#
+aaa
+;
+color
+:
+#
+585959
+;
+}
+.
+theme
+-
+dark
 .
 editor
 -
@@ -487,33 +513,41 @@ selected
 ]
 {
 background
+-
+color
 :
-linear
+#
+1d4f73
+;
+color
+:
+#
+f5f7fa
+;
+}
+.
+theme
 -
-gradient
-(
-hsl
-(
-206
-59
-%
-39
-%
-)
-hsl
-(
-206
-59
-%
-29
-%
-)
-)
-repeat
+light
+.
+editor
 -
-x
-top
-left
+label
+[
+selected
+]
+{
+background
+-
+color
+:
+#
+4c9ed9
+;
+color
+:
+#
+f5f7fa
 ;
 }
 media
@@ -535,6 +569,18 @@ max
 height
 :
 60vh
+;
+}
+#
+editors
+-
+splitter
+{
+border
+-
+color
+:
+transparent
 ;
 }
 .
@@ -590,6 +636,13 @@ ordinal
 group
 :
 0
+;
+border
+-
+bottom
+:
+1px
+solid
 ;
 }
 }
