Bug 958673 - [Australis] UITour: Style doorhanger menu for Australis Update Tour. r=MattN
UltraBlame original commit: 0fe6a5fc9081dd199bd9bcd3b984d562b837048a

--- a/browser/themes/osx/browser.css
+++ b/browser/themes/osx/browser.css
@@ -31666,3 +31666,57 @@ UITour
 inc
 .
 css
+#
+UITourTooltipIcon
+{
+-
+moz
+-
+margin
+-
+start
+:
+0
+;
+}
+#
+UITourTooltipDescription
+{
+font
+-
+size
+:
+1
+.
+1rem
+;
+line
+-
+height
+:
+1
+.
+9rem
+;
+}
+#
+UITourTooltipClose
+{
+-
+moz
+-
+margin
+-
+end
+:
+-
+15px
+;
+margin
+-
+top
+:
+-
+12px
+;
+}
