Bug 945547 - [Australis] Selected tab has wrong text-shadow with lightweight themes applied. r=MattN
UltraBlame original commit: 796764d8c4bfc963a88b338a1681c9808192d9ce

--- a/browser/themes/osx/browser.css
+++ b/browser/themes/osx/browser.css
@@ -19980,6 +19980,28 @@ loweredShadow
 .
 tabbrowser
 -
+tab
+[
+selected
+=
+true
+]
+:
+-
+moz
+-
+lwtheme
+{
+text
+-
+shadow
+:
+inherit
+;
+}
+.
+tabbrowser
+-
 tabs
 [
 closebuttons
