Bug 966199 - There's a bit of redundancy and inconsistency in the breadcrumbs styles, r=bgrins
UltraBlame original commit: 67161888665698b5fdf1b1bb0fa73e67a71680bb

--- a/browser/themes/shared/devtools/widgets.inc.css
+++ b/browser/themes/shared/devtools/widgets.inc.css
@@ -603,12 +603,20 @@ overflow
 hidden
 ;
 }
+.
+theme
+-
+dark
 #
 breadcrumb
 -
 separator
 -
 before
+.
+theme
+-
+dark
 #
 breadcrumb
 -
@@ -624,12 +632,20 @@ background
 1d4f73
 ;
 }
+.
+theme
+-
+dark
 #
 breadcrumb
 -
 separator
 -
 after
+.
+theme
+-
+dark
 #
 breadcrumb
 -
@@ -643,6 +659,64 @@ background
 :
 #
 343c45
+;
+}
+.
+theme
+-
+light
+#
+breadcrumb
+-
+separator
+-
+before
+.
+theme
+-
+light
+#
+breadcrumb
+-
+separator
+-
+after
+:
+after
+{
+background
+:
+#
+4c9ed9
+;
+}
+.
+theme
+-
+light
+#
+breadcrumb
+-
+separator
+-
+after
+.
+theme
+-
+light
+#
+breadcrumb
+-
+separator
+-
+before
+:
+after
+{
+background
+:
+#
+f0f1f2
 ;
 }
 #
@@ -901,12 +975,49 @@ repeat
 0
 0
 ;
+}
+.
+theme
+-
+dark
+.
+breadcrumbs
+-
+widget
+-
+item
+[
+checked
+]
+{
 background
 -
 color
 :
 #
 1d4f73
+;
+}
+.
+theme
+-
+light
+.
+breadcrumbs
+-
+widget
+-
+item
+[
+checked
+]
+{
+background
+-
+color
+:
+#
+4c9ed9
 ;
 }
 .
@@ -1117,22 +1228,17 @@ breadcrumbs
 widget
 -
 item
-:
-not
-(
 [
 checked
 ]
-)
-:
-hover
-label
-{
-color
-:
-white
-;
-}
+.
+breadcrumbs
+-
+widget
+-
+item
+-
+id
 .
 breadcrumbs
 -
@@ -1150,23 +1256,6 @@ widget
 item
 -
 tag
-.
-breadcrumbs
--
-widget
--
-item
-[
-checked
-]
-.
-breadcrumbs
--
-widget
--
-item
--
-id
 .
 breadcrumbs
 -
@@ -1220,33 +1309,10 @@ breadcrumbs
 widget
 -
 item
--
-id
 .
 theme
 -
 dark
-.
-breadcrumbs
--
-widget
--
-item
--
-classes
-.
-theme
--
-dark
-.
-breadcrumbs
--
-widget
--
-item
-[
-checked
-]
 .
 breadcrumbs
 -
@@ -1259,7 +1325,74 @@ classes
 color
 :
 #
+f5f7fa
+;
+}
+.
+theme
+-
+light
+.
+breadcrumbs
+-
+widget
+-
+item
+.
+theme
+-
+light
+.
+breadcrumbs
+-
+widget
+-
+item
+-
+classes
+{
+color
+:
+#
+18191a
+;
+}
+.
+theme
+-
+dark
+.
+breadcrumbs
+-
+widget
+-
+item
+-
+id
+{
+color
+:
+#
 b6babf
+;
+}
+.
+theme
+-
+light
+.
+breadcrumbs
+-
+widget
+-
+item
+-
+id
+{
+color
+:
+#
+585959
 ;
 }
 .
@@ -1293,169 +1426,6 @@ breadcrumbs
 widget
 -
 item
-[
-checked
-]
-{
-background
-:
--
-moz
--
-element
-(
-#
-breadcrumb
--
-separator
--
-before
-)
-no
--
-repeat
-0
-0
-;
-background
--
-color
-:
-#
-4c9ed9
-;
-}
-.
-theme
--
-light
-.
-breadcrumbs
--
-widget
--
-item
-:
-first
--
-child
-{
-background
--
-image
-:
-none
-;
-}
-.
-theme
--
-light
-#
-breadcrumb
--
-separator
--
-before
-.
-theme
--
-light
-#
-breadcrumb
--
-separator
--
-after
-:
-after
-{
-background
-:
-#
-4c9ed9
-;
-}
-.
-theme
--
-light
-#
-breadcrumb
--
-separator
--
-after
-.
-theme
--
-light
-#
-breadcrumb
--
-separator
--
-before
-:
-after
-{
-background
-:
-#
-f0f1f2
-;
-}
-.
-theme
--
-light
-.
-breadcrumbs
--
-widget
--
-item
-.
-theme
--
-light
-.
-breadcrumbs
--
-widget
--
-item
--
-id
-.
-theme
--
-light
-.
-breadcrumbs
--
-widget
--
-item
--
-classes
-{
-color
-:
-#
-585959
-;
-}
-.
-theme
--
-light
-.
-breadcrumbs
--
-widget
--
-item
 -
 pseudo
 -
@@ -1464,7 +1434,33 @@ classes
 color
 :
 #
-585959
+d97e00
+;
+}
+.
+theme
+-
+dark
+.
+breadcrumbs
+-
+widget
+-
+item
+:
+not
+(
+[
+checked
+]
+)
+:
+hover
+label
+{
+color
+:
+white
 ;
 }
 .
@@ -1490,8 +1486,7 @@ label
 {
 color
 :
-#
-18191a
+black
 ;
 }
 %
