--- a/browser/themes/osx/browser.css
+++ b/browser/themes/osx/browser.css
@@ -20291,12 +20291,9 @@ fullscreen
 "
 ]
 [
-customizing
-]
-[
 customize
 -
-exiting
+entered
 ]
 )
 #
@@ -30779,35 +30776,34 @@ top
 main
 -
 window
-:
--
-moz
--
-any
-(
 [
-customize
--
-entering
+tabsintitlebar
 ]
 [
 customize
 -
 entered
 ]
-)
 #
-tab
+titlebar
 -
-view
--
-deck
+content
 {
-padding
+margin
+-
+bottom
 :
-0
-2em
-2em
+0px
+!
+important
+;
+margin
+-
+top
+:
+11px
+!
+important
 ;
 }
 #
@@ -31285,6 +31281,48 @@ width
 24px
 ;
 }
+}
+#
+main
+-
+window
+[
+customizing
+]
+#
+navigator
+-
+toolbox
+:
+:
+after
+#
+main
+-
+window
+[
+customize
+-
+entered
+]
+#
+TabsToolbar
+:
+:
+after
+{
+margin
+-
+left
+:
+2em
+;
+margin
+-
+right
+:
+2em
+;
 }
 #
 main
