Bug 965861 - Update pdf.js to version 0.8.990. r=bdahl
UltraBlame original commit: b7d50811ea818054fedff80761d9593081db9b9b

--- a/browser/extensions/pdfjs/content/web/viewer.css
+++ b/browser/extensions/pdfjs/content/web/viewer.css
@@ -62,6 +62,10 @@ message
 -
 box
 ;
+outline
+:
+none
+;
 }
 .
 hidden
@@ -5128,6 +5132,10 @@ border
 -
 box
 ;
+outline
+:
+none
+;
 padding
 -
 top
@@ -8855,7 +8863,6 @@ to
 pan
 -
 grab
-*
 {
 cursor
 :
@@ -8896,108 +8903,38 @@ to
 -
 pan
 -
-grabbing
-.
 grab
--
-to
--
-pan
--
-grabbing
 *
-{
-cursor
 :
-url
+not
 (
-"
-images
-/
-grabbing
-.
-cur
-"
-)
-move
-!
-important
-;
-cursor
-:
--
-moz
--
-grabbing
-!
-important
-;
-cursor
-:
-grabbing
-!
-important
-;
-}
-.
-grab
--
-to
--
-pan
--
-grab
 input
-.
-grab
--
-to
--
-pan
--
-grab
+)
+:
+not
+(
 textarea
-.
-grab
--
-to
--
-pan
--
-grab
+)
+:
+not
+(
 button
-.
-grab
--
-to
--
-pan
--
-grab
-button
-*
-.
-grab
--
-to
--
-pan
--
-grab
+)
+:
+not
+(
 select
-.
-grab
--
-to
--
-pan
--
-grab
-option
+)
+:
+not
+(
+:
+link
+)
 {
 cursor
 :
-auto
+inherit
 !
 important
 ;
@@ -9010,10 +8947,8 @@ to
 pan
 -
 grab
-a
-[
-href
-]
+:
+active
 .
 grab
 -
@@ -9021,18 +8956,76 @@ to
 -
 pan
 -
-grab
-a
-[
-href
-]
-*
+grabbing
 {
 cursor
 :
-pointer
+url
+(
+"
+images
+/
+grabbing
+.
+cur
+"
+)
+move
 !
 important
+;
+cursor
+:
+-
+moz
+-
+grabbing
+!
+important
+;
+cursor
+:
+grabbing
+!
+important
+;
+position
+:
+fixed
+;
+background
+:
+transparent
+;
+display
+:
+block
+;
+top
+:
+0
+;
+left
+:
+0
+;
+right
+:
+0
+;
+bottom
+:
+0
+;
+overflow
+:
+hidden
+;
+z
+-
+index
+:
+50000
 ;
 }
 page
