Bug 962284 - Adjust tabstrip css in rtl locales. r=mbrubeck
UltraBlame original commit: 438cab96ec8450b0895eeb1a98cea617758bc93a

--- a/browser/metro/theme/browser.css
+++ b/browser/metro/theme/browser.css
@@ -235,6 +235,28 @@ scrollbox
 .
 scrollbutton
 -
+down
+:
+-
+moz
+-
+locale
+-
+dir
+(
+rtl
+)
+#
+tabs
+>
+.
+tabs
+-
+scrollbox
+>
+.
+scrollbutton
+-
 up
 {
 list
@@ -297,6 +319,30 @@ scrollbox
 .
 scrollbutton
 -
+down
+:
+hover
+:
+-
+moz
+-
+locale
+-
+dir
+(
+rtl
+)
+#
+tabs
+>
+.
+tabs
+-
+scrollbox
+>
+.
+scrollbutton
+-
 up
 :
 hover
@@ -319,6 +365,30 @@ rect
 important
 ;
 }
+#
+tabs
+>
+.
+tabs
+-
+scrollbox
+>
+.
+scrollbutton
+-
+down
+:
+active
+:
+-
+moz
+-
+locale
+-
+dir
+(
+rtl
+)
 #
 tabs
 >
@@ -363,6 +433,31 @@ scrollbox
 .
 scrollbutton
 -
+down
+[
+disabled
+]
+:
+-
+moz
+-
+locale
+-
+dir
+(
+rtl
+)
+#
+tabs
+>
+.
+tabs
+-
+scrollbox
+>
+.
+scrollbutton
+-
 up
 [
 disabled
@@ -386,6 +481,28 @@ rect
 important
 ;
 }
+#
+tabs
+>
+.
+tabs
+-
+scrollbox
+>
+.
+scrollbutton
+-
+up
+:
+-
+moz
+-
+locale
+-
+dir
+(
+rtl
+)
 #
 tabs
 >
@@ -459,6 +576,30 @@ scrollbox
 .
 scrollbutton
 -
+up
+:
+hover
+:
+-
+moz
+-
+locale
+-
+dir
+(
+rtl
+)
+#
+tabs
+>
+.
+tabs
+-
+scrollbox
+>
+.
+scrollbutton
+-
 down
 :
 hover
@@ -481,6 +622,30 @@ rect
 important
 ;
 }
+#
+tabs
+>
+.
+tabs
+-
+scrollbox
+>
+.
+scrollbutton
+-
+up
+:
+active
+:
+-
+moz
+-
+locale
+-
+dir
+(
+rtl
+)
 #
 tabs
 >
@@ -525,6 +690,31 @@ scrollbox
 .
 scrollbutton
 -
+up
+[
+disabled
+]
+:
+-
+moz
+-
+locale
+-
+dir
+(
+rtl
+)
+#
+tabs
+>
+.
+tabs
+-
+scrollbox
+>
+.
+scrollbutton
+-
 down
 [
 disabled
@@ -546,6 +736,104 @@ rect
 )
 !
 important
+;
+}
+.
+tabs
+-
+scrollbox
+>
+.
+scrollbutton
+-
+up
+:
+not
+(
+[
+disabled
+]
+)
+:
+not
+(
+[
+collapsed
+]
+)
+:
+-
+moz
+-
+locale
+-
+dir
+(
+rtl
+)
+:
+:
+after
+{
+right
+:
+calc
+(
+tabs_scrollarrow_width
++
+metro_spacing_normal
+)
+;
+}
+.
+tabs
+-
+scrollbox
+>
+.
+scrollbutton
+-
+down
+:
+not
+(
+[
+disabled
+]
+)
+:
+not
+(
+[
+collapsed
+]
+)
+:
+-
+moz
+-
+locale
+-
+dir
+(
+rtl
+)
+:
+:
+before
+{
+right
+:
+auto
+;
+left
+:
+calc
+(
+tabs_scrollarrow_width
++
+newtab_button_width
+)
 ;
 }
 .
